cdk.out/QuickBiteStack.template.json
{
 "Resources": {
  "QuickBiteVPCB5933F7E": {
   "Type": "AWS::EC2::VPC",
   "Properties": {
    "CidrBlock": "10.0.0.0/16",
    "EnableDnsHostnames": true,
    "EnableDnsSupport": true,
    "InstanceTenancy": "default",
    "Tags": [
     {
      "Key": "Name",
      "Value": "QuickBiteStack/QuickBiteVPC"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "QuickBiteStack/QuickBiteVPC/Resource"
   }
  },
  "QuickBiteVPCpublicSubnet1Subnet390C5398": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": "us-east-1a",
    "CidrBlock": "10.0.0.0/24",
    "MapPublicIpOnLaunch": true,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "public"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Public"
     },
     {
      "Key": "kubernetes.io/role/elb",
      "Value": "1"
     },
     {
      "Key": "Name",
      "Value": "QuickBiteStack/QuickBiteVPC/publicSubnet1"
     }
    ],
    "VpcId": {
     "Ref": "QuickBiteVPCB5933F7E"
    }
   },
   "Metadata": {
    "aws:cdk:path": "QuickBiteStack/QuickBiteVPC/publicSubnet1/Subnet"
   }
  },
  "QuickBiteVPCpublicSubnet1RouteTable4035D107": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "Tags": [
     {
      "Key": "kubernetes.io/role/elb",
      "Value": "1"
     },
     {
      "Key": "Name",
      "Value": "QuickBiteStack/QuickBiteVPC/publicSubnet1"
     }
    ],
    "VpcId": {
     "Ref": "QuickBiteVPCB5933F7E"
    }
   },
   "Metadata": {
    "aws:cdk:path": "QuickBiteStack/QuickBiteVPC/publicSubnet1/RouteTable"
   }
  },
  "QuickBiteVPCpublicSubnet1RouteTableAssociationEB4F0FBD": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "QuickBiteVPCpublicSubnet1RouteTable4035D107"
    },
    "SubnetId": {
     "Ref": "QuickBiteVPCpublicSubnet1Subnet390C5398"
    }
   },
   "Metadata": {
    "aws:cdk:path": "QuickBiteStack/QuickBiteVPC/publicSubnet1/RouteTableAssociation"
   }
  },
  "QuickBiteVPCpublicSubnet1DefaultRouteDF29E60C": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "DestinationCidrBlock": "0.0.0.0/0",
    "GatewayId": {
     "Ref": "QuickBiteVPCIGW10B98A19"
    },
    "RouteTableId": {
     "Ref": "QuickBiteVPCpublicSubnet1RouteTable4035D107"
    }
   },
   "DependsOn": [
    "QuickBiteVPCVPCGW8489B23C"
   ],
   "Metadata": {
    "aws:cdk:path": "QuickBiteStack/QuickBiteVPC/publicSubnet1/DefaultRoute"
   }
  },
  "QuickBiteVPCpublicSubnet1EIPA2493484": {
   "Type": "AWS::EC2::EIP",
   "Properties": {
    "Domain": "vpc",
    "Tags": [
     {
      "Key": "kubernetes.io/role/elb",
      "Value": "1"
     },
     {
      "Key": "Name",
      "Value": "QuickBiteStack/QuickBiteVPC/publicSubnet1"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "QuickBiteStack/QuickBiteVPC/publicSubnet1/EIP"
   }
  },
  "QuickBiteVPCpublicSubnet1NATGateway959833BA": {
   "Type": "AWS::EC2::NatGateway",
   "Properties": {
    "AllocationId": {
     "Fn::GetAtt": [
      "QuickBiteVPCpublicSubnet1EIPA2493484",
      "AllocationId"
     ]
    },
    "SubnetId": {
     "Ref": "QuickBiteVPCpublicSubnet1Subnet390C5398"
    },
    "Tags": [
     {
      "Key": "kubernetes.io/role/elb",
      "Value": "1"
     },
     {
      "Key": "Name",
      "Value": "QuickBiteStack/QuickBiteVPC/publicSubnet1"
     }
    ]
   },
   "DependsOn": [
    "QuickBiteVPCpublicSubnet1DefaultRouteDF29E60C",
    "QuickBiteVPCpublicSubnet1RouteTableAssociationEB4F0FBD"
   ],
   "Metadata": {
    "aws:cdk:path": "QuickBiteStack/QuickBiteVPC/publicSubnet1/NATGateway"
   }
  },
  "QuickBiteVPCpublicSubnet2SubnetC596EE12": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": "us-east-1b",
    "CidrBlock": "10.0.1.0/24",
    "MapPublicIpOnLaunch": true,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "public"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Public"
     },
     {
      "Key": "kubernetes.io/role/elb",
      "Value": "1"
     },
     {
      "Key": "Name",
      "Value": "QuickBiteStack/QuickBiteVPC/publicSubnet2"
     }
    ],
    "VpcId": {
     "Ref": "QuickBiteVPCB5933F7E"
    }
   },
   "Metadata": {
    "aws:cdk:path": "QuickBiteStack/QuickBiteVPC/publicSubnet2/Subnet"
   }
  },
  "QuickBiteVPCpublicSubnet2RouteTable3DD8AAE7": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "Tags": [
     {
      "Key": "kubernetes.io/role/elb",
      "Value": "1"
     },
     {
      "Key": "Name",
      "Value": "QuickBiteStack/QuickBiteVPC/publicSubnet2"
     }
    ],
    "VpcId": {
     "Ref": "QuickBiteVPCB5933F7E"
    }
   },
   "Metadata": {
    "aws:cdk:path": "QuickBiteStack/QuickBiteVPC/publicSubnet2/RouteTable"
   }
  },
  "QuickBiteVPCpublicSubnet2RouteTableAssociationD79B6A4E": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "QuickBiteVPCpublicSubnet2RouteTable3DD8AAE7"
    },
    "SubnetId": {
     "Ref": "QuickBiteVPCpublicSubnet2SubnetC596EE12"
    }
   },
   "Metadata": {
    "aws:cdk:path": "QuickBiteStack/QuickBiteVPC/publicSubnet2/RouteTableAssociation"
   }
  },
  "QuickBiteVPCpublicSubnet2DefaultRoute9770BF3C": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "DestinationCidrBlock": "0.0.0.0/0",
    "GatewayId": {
     "Ref": "QuickBiteVPCIGW10B98A19"
    },
    "RouteTableId": {
     "Ref": "QuickBiteVPCpublicSubnet2RouteTable3DD8AAE7"
    }
   },
   "DependsOn": [
    "QuickBiteVPCVPCGW8489B23C"
   ],
   "Metadata": {
    "aws:cdk:path": "QuickBiteStack/QuickBiteVPC/publicSubnet2/DefaultRoute"
   }
  },
  "QuickBiteVPCprivateSubnet1SubnetF792FAD4": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": "us-east-1a",
    "CidrBlock": "10.0.2.0/24",
    "MapPublicIpOnLaunch": false,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "private"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Private"
     },
     {
      "Key": "kubernetes.io/role/internal-elb",
      "Value": "1"
     },
     {
      "Key": "Name",
      "Value": "QuickBiteStack/QuickBiteVPC/privateSubnet1"
     }
    ],
    "VpcId": {
     "Ref": "QuickBiteVPCB5933F7E"
    }
   },
   "Metadata": {
    "aws:cdk:path": "QuickBiteStack/QuickBiteVPC/privateSubnet1/Subnet"
   }
  },
  "QuickBiteVPCprivateSubnet1RouteTableE363DD1C": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "Tags": [
     {
      "Key": "kubernetes.io/role/internal-elb",
      "Value": "1"
     },
     {
      "Key": "Name",
      "Value": "QuickBiteStack/QuickBiteVPC/privateSubnet1"
     }
    ],
    "VpcId": {
     "Ref": "QuickBiteVPCB5933F7E"
    }
   },
   "Metadata": {
    "aws:cdk:path": "QuickBiteStack/QuickBiteVPC/privateSubnet1/RouteTable"
   }
  },
  "QuickBiteVPCprivateSubnet1RouteTableAssociationC88991EA": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "QuickBiteVPCprivateSubnet1RouteTableE363DD1C"
    },
    "SubnetId": {
     "Ref": "QuickBiteVPCprivateSubnet1SubnetF792FAD4"
    }
   },
   "Metadata": {
    "aws:cdk:path": "QuickBiteStack/QuickBiteVPC/privateSubnet1/RouteTableAssociation"
   }
  },
  "QuickBiteVPCprivateSubnet1DefaultRoute61EF2309": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "DestinationCidrBlock": "0.0.0.0/0",
    "NatGatewayId": {
     "Ref": "QuickBiteVPCpublicSubnet1NATGateway959833BA"
    },
    "RouteTableId": {
     "Ref": "QuickBiteVPCprivateSubnet1RouteTableE363DD1C"
    }
   },
   "Metadata": {
    "aws:cdk:path": "QuickBiteStack/QuickBiteVPC/privateSubnet1/DefaultRoute"
   }
  },
  "QuickBiteVPCprivateSubnet2SubnetA58AE8A8": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": "us-east-1b",
    "CidrBlock": "10.0.3.0/24",
    "MapPublicIpOnLaunch": false,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "private"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Private"
     },
     {
      "Key": "kubernetes.io/role/internal-elb",
      "Value": "1"
     },
     {
      "Key": "Name",
      "Value": "QuickBiteStack/QuickBiteVPC/privateSubnet2"
     }
    ],
    "VpcId": {
     "Ref": "QuickBiteVPCB5933F7E"
    }
   },
   "Metadata": {
    "aws:cdk:path": "QuickBiteStack/QuickBiteVPC/privateSubnet2/Subnet"
   }
  },
  "QuickBiteVPCprivateSubnet2RouteTable2AE5AE57": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "Tags": [
     {
      "Key": "kubernetes.io/role/internal-elb",
      "Value": "1"
     },
     {
      "Key": "Name",
      "Value": "QuickBiteStack/QuickBiteVPC/privateSubnet2"
     }
    ],
    "VpcId": {
     "Ref": "QuickBiteVPCB5933F7E"
    }
   },
   "Metadata": {
    "aws:cdk:path": "QuickBiteStack/QuickBiteVPC/privateSubnet2/RouteTable"
   }
  },
  "QuickBiteVPCprivateSubnet2RouteTableAssociation60B2F0FB": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "QuickBiteVPCprivateSubnet2RouteTable2AE5AE57"
    },
    "SubnetId": {
     "Ref": "QuickBiteVPCprivateSubnet2SubnetA58AE8A8"
    }
   },
   "Metadata": {
    "aws:cdk:path": "QuickBiteStack/QuickBiteVPC/privateSubnet2/RouteTableAssociation"
   }
  },
  "QuickBiteVPCprivateSubnet2DefaultRoute5452BFB1": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "DestinationCidrBlock": "0.0.0.0/0",
    "NatGatewayId": {
     "Ref": "QuickBiteVPCpublicSubnet1NATGateway959833BA"
    },
    "RouteTableId": {
     "Ref": "QuickBiteVPCprivateSubnet2RouteTable2AE5AE57"
    }
   },
   "Metadata": {
    "aws:cdk:path": "QuickBiteStack/QuickBiteVPC/privateSubnet2/DefaultRoute"
   }
  },
  "QuickBiteVPCIGW10B98A19": {
   "Type": "AWS::EC2::InternetGateway",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "QuickBiteStack/QuickBiteVPC"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "QuickBiteStack/QuickBiteVPC/IGW"
   }
  },
  "QuickBiteVPCVPCGW8489B23C": {
   "Type": "AWS::EC2::VPCGatewayAttachment",
   "Properties": {
    "InternetGatewayId": {
     "Ref": "QuickBiteVPCIGW10B98A19"
    },
    "VpcId": {
     "Ref": "QuickBiteVPCB5933F7E"
    }
   },
   "Metadata": {
    "aws:cdk:path": "QuickBiteStack/QuickBiteVPC/VPCGW"
   }
  },
  "EksSecurityGroup1CEAF9CC": {
   "Type": "AWS::EC2::SecurityGroup",
   "Properties": {
    "GroupDescription": "Security group for EKS cluster",
    "SecurityGroupEgress": [
     {
      "CidrIp": "0.0.0.0/0",
      "Description": "Allow all outbound traffic by default",
      "IpProtocol": "-1"
     }
    ],
    "VpcId": {
     "Ref": "QuickBiteVPCB5933F7E"
    }
   },
   "Metadata": {
    "aws:cdk:path": "QuickBiteStack/EksSecurityGroup/Resource"
   }
  },
  "KubectlLayer600207B5": {
   "Type": "AWS::Lambda::LayerVersion",
   "Properties": {
    "CompatibleRuntimes": [
     "nodejs18.x",
     "python3.9",
     "python3.11"
    ],
    "Content": {
     "S3Bucket": "cdk-hnb659fds-assets-640168423636-us-east-1",
     "S3Key": "7909eaa017ce251f919ea152c056bec9f35bf628d2938e287e1d98dfca5b7931.zip"
    },
    "Description": "A layer that contains the kubectl binary"
   },
   "Metadata": {
    "aws:cdk:path": "QuickBiteStack/KubectlLayer/Resource",
    "aws:asset:path": "asset.7909eaa017ce251f919ea152c056bec9f35bf628d2938e287e1d98dfca5b7931",
    "aws:asset:is-bundled": false,
    "aws:asset:property": "Content"
   }
  },
  "QuickBiteClusterKubectlHandlerRole1C1969C0": {
   "Type": "AWS::IAM::Role",
   "Properties": {
    "AssumeRolePolicyDocument": {
     "Statement": [
      {
       "Action": "sts:AssumeRole",
       "Effect": "Allow",
       "Principal": {
        "Service": "lambda.amazonaws.com"
       }
      }
     ],
     "Version": "2012-10-17"
    },
    "ManagedPolicyArns": [
     {
      "Fn::Join": [
       "",
       [
        "arn:",
        {
         "Ref": "AWS::Partition"
        },
        ":iam::aws:policy/service-role/AWSLambdaBasicExecutionRole"
       ]
      ]
     },
     {
      "Fn::Join": [
       "",
       [
        "arn:",
        {
         "Ref": "AWS::Partition"
        },
        ":iam::aws:policy/service-role/AWSLambdaVPCAccessExecutionRole"
       ]
      ]
     },
     {
      "Fn::Join": [
       "",
       [
        "arn:",
        {
         "Ref": "AWS::Partition"
        },
        ":iam::aws:policy/AmazonEC2ContainerRegistryReadOnly"
       ]
      ]
     },
     {
      "Fn::If": [
       "QuickBiteClusterHasEcrPublic7A53002E",
       {
        "Fn::Join": [
         "",
         [
          "arn:",
          {
           "Ref": "AWS::Partition"
          },
          ":iam::aws:policy/AmazonElasticContainerRegistryPublicReadOnly"
         ]
        ]
       },
       {
        "Ref": "AWS::NoValue"
       }
      ]
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "QuickBiteStack/QuickBiteCluster/KubectlHandlerRole/Resource"
   }
  },
  "QuickBiteClusterKubectlHandlerRoleDefaultPolicy5315AAA4": {
   "Type": "AWS::IAM::Policy",
   "Properties": {
    "PolicyDocument": {
     "Statement": [
      {
       "Action": "eks:DescribeCluster",
       "Effect": "Allow",
       "Resource": {
        "Fn::GetAtt": [
         "QuickBiteCluster50665CCD",
         "Arn"
        ]
       }
      },
      {
       "Action": "sts:AssumeRole",
       "Effect": "Allow",
       "Resource": {
        "Fn::GetAtt": [
         "QuickBiteClusterCreationRole1C1F12D9",
         "Arn"
        ]
       }
      }
     ],
     "Version": "2012-10-17"
    },
    "PolicyName": "QuickBiteClusterKubectlHandlerRoleDefaultPolicy5315AAA4",
    "Roles": [
     {
      "Ref": "QuickBiteClusterKubectlHandlerRole1C1969C0"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "QuickBiteStack/QuickBiteCluster/KubectlHandlerRole/DefaultPolicy/Resource"
   }
  },
  "QuickBiteClusterRole3305139C": {
   "Type": "AWS::IAM::Role",
   "Properties": {
    "AssumeRolePolicyDocument": {
     "Statement": [
      {
       "Action": "sts:AssumeRole",
       "Effect": "Allow",
       "Principal": {
        "Service": "eks.amazonaws.com"
       }
      }
     ],
     "Version": "2012-10-17"
    },
    "ManagedPolicyArns": [
     {
      "Fn::Join": [
       "",
       [
        "arn:",
        {
         "Ref": "AWS::Partition"
        },
        ":iam::aws:policy/AmazonEKSClusterPolicy"
       ]
      ]
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "QuickBiteStack/QuickBiteCluster/Role/Resource"
   }
  },
  "QuickBiteClusterCreationRole1C1F12D9": {
   "Type": "AWS::IAM::Role",
   "Properties": {
    "AssumeRolePolicyDocument": {
     "Statement": [
      {
       "Action": "sts:AssumeRole",
       "Effect": "Allow",
       "Principal": {
        "AWS": [
         {
          "Fn::GetAtt": [
           "QuickBiteClusterKubectlHandlerRole1C1969C0",
           "Arn"
          ]
         },
         {
          "Fn::GetAtt": [
           "awscdkawseksClusterResourceProviderNestedStackawscdkawseksClusterResourceProviderNestedStackResource9827C454",
           "Outputs.QuickBiteStackawscdkawseksClusterResourceProviderIsCompleteHandlerServiceRoleADD0B4E3Arn"
          ]
         },
         {
          "Fn::GetAtt": [
           "awscdkawseksClusterResourceProviderNestedStackawscdkawseksClusterResourceProviderNestedStackResource9827C454",
           "Outputs.QuickBiteStackawscdkawseksClusterResourceProviderOnEventHandlerServiceRoleFE780F56Arn"
          ]
         }
        ]
       }
      }
     ],
     "Version": "2012-10-17"
    }
   },
   "DependsOn": [
    "QuickBiteVPCIGW10B98A19",
    "QuickBiteVPCprivateSubnet1DefaultRoute61EF2309",
    "QuickBiteVPCprivateSubnet1RouteTableE363DD1C",
    "QuickBiteVPCprivateSubnet1RouteTableAssociationC88991EA",
    "QuickBiteVPCprivateSubnet1SubnetF792FAD4",
    "QuickBiteVPCprivateSubnet2DefaultRoute5452BFB1",
    "QuickBiteVPCprivateSubnet2RouteTable2AE5AE57",
    "QuickBiteVPCprivateSubnet2RouteTableAssociation60B2F0FB",
    "QuickBiteVPCprivateSubnet2SubnetA58AE8A8",
    "QuickBiteVPCpublicSubnet1DefaultRouteDF29E60C",
    "QuickBiteVPCpublicSubnet1EIPA2493484",
    "QuickBiteVPCpublicSubnet1NATGateway959833BA",
    "QuickBiteVPCpublicSubnet1RouteTable4035D107",
    "QuickBiteVPCpublicSubnet1RouteTableAssociationEB4F0FBD",
    "QuickBiteVPCpublicSubnet1Subnet390C5398",
    "QuickBiteVPCpublicSubnet2DefaultRoute9770BF3C",
    "QuickBiteVPCpublicSubnet2RouteTable3DD8AAE7",
    "QuickBiteVPCpublicSubnet2RouteTableAssociationD79B6A4E",
    "QuickBiteVPCpublicSubnet2SubnetC596EE12",
    "QuickBiteVPCB5933F7E",
    "QuickBiteVPCVPCGW8489B23C"
   ],
   "Metadata": {
    "aws:cdk:path": "QuickBiteStack/QuickBiteCluster/Resource/CreationRole/Resource"
   }
  },
  "QuickBiteClusterCreationRoleDefaultPolicy685C0687": {
   "Type": "AWS::IAM::Policy",
   "Properties": {
    "PolicyDocument": {
     "Statement": [
      {
       "Action": "iam:PassRole",
       "Effect": "Allow",
       "Resource": {
        "Fn::GetAtt": [
         "QuickBiteClusterRole3305139C",
         "Arn"
        ]
       }
      },
      {
       "Action": [
        "eks:CreateCluster",
        "eks:CreateFargateProfile",
        "eks:DeleteCluster",
        "eks:DescribeCluster",
        "eks:DescribeUpdate",
        "eks:TagResource",
        "eks:UntagResource",
        "eks:UpdateClusterConfig",
        "eks:UpdateClusterVersion"
       ],
       "Effect": "Allow",
       "Resource": [
        "arn:aws:eks:us-east-1:640168423636:cluster/quickbite-cluster",
        "arn:aws:eks:us-east-1:640168423636:cluster/quickbite-cluster/*"
       ]
      },
      {
       "Action": [
        "eks:DeleteFargateProfile",
        "eks:DescribeFargateProfile"
       ],
       "Effect": "Allow",
       "Resource": "arn:aws:eks:us-east-1:640168423636:fargateprofile/quickbite-cluster/*"
      },
      {
       "Action": [
        "ec2:DescribeDhcpOptions",
        "ec2:DescribeInstances",
        "ec2:DescribeNetworkInterfaces",
        "ec2:DescribeRouteTables",
        "ec2:DescribeSecurityGroups",
        "ec2:DescribeSubnets",
        "ec2:DescribeVpcs",
        "iam:CreateServiceLinkedRole",
        "iam:GetRole",
        "iam:listAttachedRolePolicies"
       ],
       "Effect": "Allow",
       "Resource": "*"
      }
     ],
     "Version": "2012-10-17"
    },
    "PolicyName": "QuickBiteClusterCreationRoleDefaultPolicy685C0687",
    "Roles": [
     {
      "Ref": "QuickBiteClusterCreationRole1C1F12D9"
     }
    ]
   },
   "DependsOn": [
    "QuickBiteVPCIGW10B98A19",
    "QuickBiteVPCprivateSubnet1DefaultRoute61EF2309",
    "QuickBiteVPCprivateSubnet1RouteTableE363DD1C",
    "QuickBiteVPCprivateSubnet1RouteTableAssociationC88991EA",
    "QuickBiteVPCprivateSubnet1SubnetF792FAD4",
    "QuickBiteVPCprivateSubnet2DefaultRoute5452BFB1",
    "QuickBiteVPCprivateSubnet2RouteTable2AE5AE57",
    "QuickBiteVPCprivateSubnet2RouteTableAssociation60B2F0FB",
    "QuickBiteVPCprivateSubnet2SubnetA58AE8A8",
    "QuickBiteVPCpublicSubnet1DefaultRouteDF29E60C",
    "QuickBiteVPCpublicSubnet1EIPA2493484",
    "QuickBiteVPCpublicSubnet1NATGateway959833BA",
    "QuickBiteVPCpublicSubnet1RouteTable4035D107",
    "QuickBiteVPCpublicSubnet1RouteTableAssociationEB4F0FBD",
    "QuickBiteVPCpublicSubnet1Subnet390C5398",
    "QuickBiteVPCpublicSubnet2DefaultRoute9770BF3C",
    "QuickBiteVPCpublicSubnet2RouteTable3DD8AAE7",
    "QuickBiteVPCpublicSubnet2RouteTableAssociationD79B6A4E",
    "QuickBiteVPCpublicSubnet2SubnetC596EE12",
    "QuickBiteVPCB5933F7E",
    "QuickBiteVPCVPCGW8489B23C"
   ],
   "Metadata": {
    "aws:cdk:path": "QuickBiteStack/QuickBiteCluster/Resource/CreationRole/DefaultPolicy/Resource"
   }
  },
  "QuickBiteCluster50665CCD": {
   "Type": "Custom::AWSCDK-EKS-Cluster",
   "Properties": {
    "ServiceToken": {
     "Fn::GetAtt": [
      "awscdkawseksClusterResourceProviderNestedStackawscdkawseksClusterResourceProviderNestedStackResource9827C454",
      "Outputs.QuickBiteStackawscdkawseksClusterResourceProviderframeworkonEvent1033D729Arn"
     ]
    },
    "Config": {
     "name": "quickbite-cluster",
     "version": "1.27",
     "roleArn": {
      "Fn::GetAtt": [
       "QuickBiteClusterRole3305139C",
       "Arn"
      ]
     },
     "kubernetesNetworkConfig": {
      "ipFamily": "ipv4"
     },
     "resourcesVpcConfig": {
      "subnetIds": [
       {
        "Ref": "QuickBiteVPCprivateSubnet1SubnetF792FAD4"
       },
       {
        "Ref": "QuickBiteVPCprivateSubnet2SubnetA58AE8A8"
       }
      ],
      "securityGroupIds": [
       {
        "Fn::GetAtt": [
         "EksSecurityGroup1CEAF9CC",
         "GroupId"
        ]
       }
      ],
      "endpointPublicAccess": true,
      "endpointPrivateAccess": true
     },
     "accessConfig": {}
    },
    "AssumeRoleArn": {
     "Fn::GetAtt": [
      "QuickBiteClusterCreationRole1C1F12D9",
      "Arn"
     ]
    },
    "AttributesRevision": 4
   },
   "DependsOn": [
    "QuickBiteClusterCreationRoleDefaultPolicy685C0687",
    "QuickBiteClusterCreationRole1C1F12D9",
    "QuickBiteVPCIGW10B98A19",
    "QuickBiteVPCprivateSubnet1DefaultRoute61EF2309",
    "QuickBiteVPCprivateSubnet1RouteTableE363DD1C",
    "QuickBiteVPCprivateSubnet1RouteTableAssociationC88991EA",
    "QuickBiteVPCprivateSubnet1SubnetF792FAD4",
    "QuickBiteVPCprivateSubnet2DefaultRoute5452BFB1",
    "QuickBiteVPCprivateSubnet2RouteTable2AE5AE57",
    "QuickBiteVPCprivateSubnet2RouteTableAssociation60B2F0FB",
    "QuickBiteVPCprivateSubnet2SubnetA58AE8A8",
    "QuickBiteVPCpublicSubnet1DefaultRouteDF29E60C",
    "QuickBiteVPCpublicSubnet1EIPA2493484",
    "QuickBiteVPCpublicSubnet1NATGateway959833BA",
    "QuickBiteVPCpublicSubnet1RouteTable4035D107",
    "QuickBiteVPCpublicSubnet1RouteTableAssociationEB4F0FBD",
    "QuickBiteVPCpublicSubnet1Subnet390C5398",
    "QuickBiteVPCpublicSubnet2DefaultRoute9770BF3C",
    "QuickBiteVPCpublicSubnet2RouteTable3DD8AAE7",
    "QuickBiteVPCpublicSubnet2RouteTableAssociationD79B6A4E",
    "QuickBiteVPCpublicSubnet2SubnetC596EE12",
    "QuickBiteVPCB5933F7E",
    "QuickBiteVPCVPCGW8489B23C"
   ],
   "UpdateReplacePolicy": "Delete",
   "DeletionPolicy": "Delete",
   "Metadata": {
    "aws:cdk:path": "QuickBiteStack/QuickBiteCluster/Resource/Resource/Default"
   }
  },
  "QuickBiteClusterKubectlReadyBarrierA6A54D49": {
   "Type": "AWS::SSM::Parameter",
   "Properties": {
    "Type": "String",
    "Value": "aws:cdk:eks:kubectl-ready"
   },
   "DependsOn": [
    "QuickBiteClusterCreationRoleDefaultPolicy685C0687",
    "QuickBiteClusterCreationRole1C1F12D9",
    "QuickBiteCluster50665CCD"
   ],
   "Metadata": {
    "aws:cdk:path": "QuickBiteStack/QuickBiteCluster/KubectlReadyBarrier"
   }
  },
  "QuickBiteClusterNodegroupManagedNodesNodeGroupRole1D5DBAE2": {
   "Type": "AWS::IAM::Role",
   "Properties": {
    "AssumeRolePolicyDocument": {
     "Statement": [
      {
       "Action": "sts:AssumeRole",
       "Effect": "Allow",
       "Principal": {
        "Service": "ec2.amazonaws.com"
       }
      }
     ],
     "Version": "2012-10-17"
    },
    "ManagedPolicyArns": [
     {
      "Fn::Join": [
       "",
       [
        "arn:",
        {
         "Ref": "AWS::Partition"
        },
        ":iam::aws:policy/AmazonEKSWorkerNodePolicy"
       ]
      ]
     },
     {
      "Fn::Join": [
       "",
       [
        "arn:",
        {
         "Ref": "AWS::Partition"
        },
        ":iam::aws:policy/AmazonEKS_CNI_Policy"
       ]
      ]
     },
     {
      "Fn::Join": [
       "",
       [
        "arn:",
        {
         "Ref": "AWS::Partition"
        },
        ":iam::aws:policy/AmazonEC2ContainerRegistryReadOnly"
       ]
      ]
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "QuickBiteStack/QuickBiteCluster/NodegroupManagedNodes/NodeGroupRole/Resource"
   }
  },
  "QuickBiteClusterNodegroupManagedNodes280B46F2": {
   "Type": "AWS::EKS::Nodegroup",
   "Properties": {
    "AmiType": "AL2_x86_64",
    "ClusterName": {
     "Ref": "QuickBiteCluster50665CCD"
    },
    "DiskSize": 20,
    "ForceUpdateEnabled": true,
    "InstanceTypes": [
     "t3.medium"
    ],
    "NodeRole": {
     "Fn::GetAtt": [
      "QuickBiteClusterNodegroupManagedNodesNodeGroupRole1D5DBAE2",
      "Arn"
     ]
    },
    "ScalingConfig": {
     "DesiredSize": 2,
     "MaxSize": 3,
     "MinSize": 1
    },
    "Subnets": [
     {
      "Ref": "QuickBiteVPCprivateSubnet1SubnetF792FAD4"
     },
     {
      "Ref": "QuickBiteVPCprivateSubnet2SubnetA58AE8A8"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "QuickBiteStack/QuickBiteCluster/NodegroupManagedNodes/Resource"
   }
  },
  "QuickBiteClusterAwsAuthmanifest2DFF476B": {
   "Type": "Custom::AWSCDK-EKS-KubernetesResource",
   "Properties": {
    "ServiceToken": {
     "Fn::GetAtt": [
      "awscdkawseksKubectlProviderNestedStackawscdkawseksKubectlProviderNestedStackResourceA7AEBA6B",
      "Outputs.QuickBiteStackawscdkawseksKubectlProviderframeworkonEventB2645501Arn"
     ]
    },
    "Manifest": {
     "Fn::Join": [
      "",
      [
       "[{\"apiVersion\":\"v1\",\"kind\":\"ConfigMap\",\"metadata\":{\"name\":\"aws-auth\",\"namespace\":\"kube-system\",\"labels\":{\"aws.cdk.eks/prune-c861e1b660fa1cf4f25cba842ab1bcc53565a70bfe\":\"\"}},\"data\":{\"mapRoles\":\"[{\\\"rolearn\\\":\\\"",
       {
        "Fn::GetAtt": [
         "QuickBiteClusterNodegroupManagedNodesNodeGroupRole1D5DBAE2",
         "Arn"
        ]
       },
       "\\\",\\\"username\\\":\\\"system:node:{{EC2PrivateDNSName}}\\\",\\\"groups\\\":[\\\"system:bootstrappers\\\",\\\"system:nodes\\\"]}]\",\"mapUsers\":\"[]\",\"mapAccounts\":\"[]\"}}]"
      ]
     ]
    },
    "ClusterName": {
     "Ref": "QuickBiteCluster50665CCD"
    },
    "RoleArn": {
     "Fn::GetAtt": [
      "QuickBiteClusterCreationRole1C1F12D9",
      "Arn"
     ]
    },
    "PruneLabel": "aws.cdk.eks/prune-c861e1b660fa1cf4f25cba842ab1bcc53565a70bfe",
    "Overwrite": true
   },
   "DependsOn": [
    "QuickBiteClusterKubectlReadyBarrierA6A54D49"
   ],
   "UpdateReplacePolicy": "Delete",
   "DeletionPolicy": "Delete",
   "Metadata": {
    "aws:cdk:path": "QuickBiteStack/QuickBiteCluster/AwsAuth/manifest/Resource/Default"
   }
  },
  "QuickBiteClustermanifestAppNamespace667C30E7": {
   "Type": "Custom::AWSCDK-EKS-KubernetesResource",
   "Properties": {
    "ServiceToken": {
     "Fn::GetAtt": [
      "awscdkawseksKubectlProviderNestedStackawscdkawseksKubectlProviderNestedStackResourceA7AEBA6B",
      "Outputs.QuickBiteStackawscdkawseksKubectlProviderframeworkonEventB2645501Arn"
     ]
    },
    "Manifest": "[{\"apiVersion\":\"v1\",\"kind\":\"Namespace\",\"metadata\":{\"name\":\"quickbite\",\"labels\":{\"aws.cdk.eks/prune-c87b1d2664c0f548ebd6f62f7332d18e2439750b66\":\"\"}}}]",
    "ClusterName": {
     "Ref": "QuickBiteCluster50665CCD"
    },
    "RoleArn": {
     "Fn::GetAtt": [
      "QuickBiteClusterCreationRole1C1F12D9",
      "Arn"
     ]
    },
    "PruneLabel": "aws.cdk.eks/prune-c87b1d2664c0f548ebd6f62f7332d18e2439750b66"
   },
   "DependsOn": [
    "QuickBiteClusterKubectlReadyBarrierA6A54D49"
   ],
   "UpdateReplacePolicy": "Delete",
   "DeletionPolicy": "Delete",
   "Metadata": {
    "aws:cdk:path": "QuickBiteStack/QuickBiteCluster/manifest-AppNamespace/Resource/Default"
   }
  },
  "QuickBiteClustermanifestWebAppDeployment1A3CAE18": {
   "Type": "Custom::AWSCDK-EKS-KubernetesResource",
   "Properties": {
    "ServiceToken": {
     "Fn::GetAtt": [
      "awscdkawseksKubectlProviderNestedStackawscdkawseksKubectlProviderNestedStackResourceA7AEBA6B",
      "Outputs.QuickBiteStackawscdkawseksKubectlProviderframeworkonEventB2645501Arn"
     ]
    },
    "Manifest": {
     "Fn::Join": [
      "",
      [
       "[{\"apiVersion\":\"apps/v1\",\"kind\":\"Deployment\",\"metadata\":{\"name\":\"quickbite-webapp\",\"namespace\":\"quickbite\",\"labels\":{\"aws.cdk.eks/prune-c8d97bef361b2bbc4996b23d2c8cfc8ad294b51b76\":\"\"}},\"spec\":{\"replicas\":2,\"selector\":{\"matchLabels\":{\"app\":\"quickbite-webapp\"}},\"template\":{\"metadata\":{\"labels\":{\"app\":\"quickbite-webapp\"}},\"spec\":{\"containers\":[{\"name\":\"webapp\",\"image\":\"",
       {
        "Fn::Select": [
         4,
         {
          "Fn::Split": [
           ":",
           {
            "Fn::GetAtt": [
             "WebAppRepositoryE1B58524",
             "Arn"
            ]
           }
          ]
         }
        ]
       },
       ".dkr.ecr.",
       {
        "Fn::Select": [
         3,
         {
          "Fn::Split": [
           ":",
           {
            "Fn::GetAtt": [
             "WebAppRepositoryE1B58524",
             "Arn"
            ]
           }
          ]
         }
        ]
       },
       ".",
       {
        "Ref": "AWS::URLSuffix"
       },
       "/",
       {
        "Ref": "WebAppRepositoryE1B58524"
       },
       ":latest\",\"ports\":[{\"containerPort\":80}],\"resources\":{\"requests\":{\"cpu\":\"200m\",\"memory\":\"256Mi\"},\"limits\":{\"cpu\":\"500m\",\"memory\":\"512Mi\"}}}]}}}}]"
      ]
     ]
    },
    "ClusterName": {
     "Ref": "QuickBiteCluster50665CCD"
    },
    "RoleArn": {
     "Fn::GetAtt": [
      "QuickBiteClusterCreationRole1C1F12D9",
      "Arn"
     ]
    },
    "PruneLabel": "aws.cdk.eks/prune-c8d97bef361b2bbc4996b23d2c8cfc8ad294b51b76"
   },
   "DependsOn": [
    "QuickBiteClusterKubectlReadyBarrierA6A54D49",
    "QuickBiteClustermanifestAppNamespace667C30E7"
   ],
   "UpdateReplacePolicy": "Delete",
   "DeletionPolicy": "Delete",
   "Metadata": {
    "aws:cdk:path": "QuickBiteStack/QuickBiteCluster/manifest-WebAppDeployment/Resource/Default"
   }
  },
  "QuickBiteClustermanifestWebAppService4F866F99": {
   "Type": "Custom::AWSCDK-EKS-KubernetesResource",
   "Properties": {
    "ServiceToken": {
     "Fn::GetAtt": [
      "awscdkawseksKubectlProviderNestedStackawscdkawseksKubectlProviderNestedStackResourceA7AEBA6B",
      "Outputs.QuickBiteStackawscdkawseksKubectlProviderframeworkonEventB2645501Arn"
     ]
    },
    "Manifest": "[{\"apiVersion\":\"v1\",\"kind\":\"Service\",\"metadata\":{\"name\":\"quickbite-webapp\",\"namespace\":\"quickbite\",\"labels\":{\"aws.cdk.eks/prune-c87aefcdf92361daec3c04835214e35d7cb85341f8\":\"\"}},\"spec\":{\"type\":\"LoadBalancer\",\"ports\":[{\"port\":80,\"targetPort\":80}],\"selector\":{\"app\":\"quickbite-webapp\"}}}]",
    "ClusterName": {
     "Ref": "QuickBiteCluster50665CCD"
    },
    "RoleArn": {
     "Fn::GetAtt": [
      "QuickBiteClusterCreationRole1C1F12D9",
      "Arn"
     ]
    },
    "PruneLabel": "aws.cdk.eks/prune-c87aefcdf92361daec3c04835214e35d7cb85341f8"
   },
   "DependsOn": [
    "QuickBiteClusterKubectlReadyBarrierA6A54D49",
    "QuickBiteClustermanifestWebAppDeployment1A3CAE18"
   ],
   "UpdateReplacePolicy": "Delete",
   "DeletionPolicy": "Delete",
   "Metadata": {
    "aws:cdk:path": "QuickBiteStack/QuickBiteCluster/manifest-WebAppService/Resource/Default"
   }
  },
  "awscdkawseksClusterResourceProviderNestedStackawscdkawseksClusterResourceProviderNestedStackResource9827C454": {
   "Type": "AWS::CloudFormation::Stack",
   "Properties": {
    "TemplateURL": {
     "Fn::Join": [
      "",
      [
       "https://s3.us-east-1.",
       {
        "Ref": "AWS::URLSuffix"
       },
       "/cdk-hnb659fds-assets-640168423636-us-east-1/b24f634b8babcd384f13f7418b04d1e655eda8486f642b04eea636292d3547ad.json"
      ]
     ]
    }
   },
   "UpdateReplacePolicy": "Delete",
   "DeletionPolicy": "Delete",
   "Metadata": {
    "aws:cdk:path": "QuickBiteStack/@aws-cdk--aws-eks.ClusterResourceProvider.NestedStack/@aws-cdk--aws-eks.ClusterResourceProvider.NestedStackResource",
    "aws:asset:path": "QuickBiteStackawscdkawseksClusterResourceProviderA9AEF261.nested.template.json",
    "aws:asset:property": "TemplateURL"
   }
  },
  "awscdkawseksKubectlProviderNestedStackawscdkawseksKubectlProviderNestedStackResourceA7AEBA6B": {
   "Type": "AWS::CloudFormation::Stack",
   "Properties": {
    "Parameters": {
     "referencetoQuickBiteStackKubectlLayerE8464A42Ref": {
      "Ref": "KubectlLayer600207B5"
     },
     "referencetoQuickBiteStackQuickBiteClusterKubectlHandlerRole5AB33988Arn": {
      "Fn::GetAtt": [
       "QuickBiteClusterKubectlHandlerRole1C1969C0",
       "Arn"
      ]
     },
     "referencetoQuickBiteStackQuickBiteVPCprivateSubnet1Subnet6FA9289CRef": {
      "Ref": "QuickBiteVPCprivateSubnet1SubnetF792FAD4"
     },
     "referencetoQuickBiteStackQuickBiteVPCprivateSubnet2Subnet0BA730F0Ref": {
      "Ref": "QuickBiteVPCprivateSubnet2SubnetA58AE8A8"
     },
     "referencetoQuickBiteStackQuickBiteCluster44C978A5ClusterSecurityGroupId": {
      "Fn::GetAtt": [
       "QuickBiteCluster50665CCD",
       "ClusterSecurityGroupId"
      ]
     }
    },
    "TemplateURL": {
     "Fn::Join": [
      "",
      [
       "https://s3.us-east-1.",
       {
        "Ref": "AWS::URLSuffix"
       },
       "/cdk-hnb659fds-assets-640168423636-us-east-1/6750a13fc3b08b12e9802e360ecafd517000f8c8d6d58b0f4908fe833c3d9da2.json"
      ]
     ]
    }
   },
   "DependsOn": [
    "QuickBiteClusterKubectlHandlerRoleDefaultPolicy5315AAA4",
    "QuickBiteClusterKubectlHandlerRole1C1969C0",
    "QuickBiteVPCprivateSubnet1DefaultRoute61EF2309",
    "QuickBiteVPCprivateSubnet1RouteTableAssociationC88991EA",
    "QuickBiteVPCprivateSubnet2DefaultRoute5452BFB1",
    "QuickBiteVPCprivateSubnet2RouteTableAssociation60B2F0FB"
   ],
   "UpdateReplacePolicy": "Delete",
   "DeletionPolicy": "Delete",
   "Metadata": {
    "aws:cdk:path": "QuickBiteStack/@aws-cdk--aws-eks.KubectlProvider.NestedStack/@aws-cdk--aws-eks.KubectlProvider.NestedStackResource",
    "aws:asset:path": "QuickBiteStackawscdkawseksKubectlProvider767AE5D2.nested.template.json",
    "aws:asset:property": "TemplateURL"
   }
  },
  "WebAppRepositoryE1B58524": {
   "Type": "AWS::ECR::Repository",
   "Properties": {
    "LifecyclePolicy": {
     "LifecyclePolicyText": "{\"rules\":[{\"rulePriority\":1,\"description\":\"Keep only the last 5 images\",\"selection\":{\"tagStatus\":\"any\",\"countType\":\"imageCountMoreThan\",\"countNumber\":5},\"action\":{\"type\":\"expire\"}}]}"
    },
    "RepositoryName": "quickbite-webapp"
   },
   "UpdateReplacePolicy": "Delete",
   "DeletionPolicy": "Delete",
   "Metadata": {
    "aws:cdk:path": "QuickBiteStack/WebAppRepository/Resource"
   }
  },
  "CDKMetadata": {
   "Type": "AWS::CDK::Metadata",
   "Properties": {
    "Analytics": "v2:deflate64:H4sIAAAAAAAA/01RTW/CMAz9LdxNJkCadi3VhNA2VrUTV+SmBgJtUsUOFar63ydaoJzehx3nxZmr2cdMzSbY8FQX52lpctVmgvoM2PCuJT1X7bbWEO/tNokhCXlpdBZyS3LzRpa6IPSHeUmjP3oRs9MGxTj7bL6Rz3Vygw3KCoUavELizQWFxsFrK+QtPRuGJHcViaA+VmQFMtLBG7muvAt1n+HV6KDEKi9Qtd94Jb8lz/csr7oDXuyQmYRVdAPghVoGfSZZIhPQmVUbl4GFPGxcQYfHZaOIGo6CHOEr5H1u4h+0Zk8sHRisVJu6YUc9Jq40un/UwDog7VWbUu3YiPN9aVRdBymxC14T9AEzwYOxB4gDi6uetf7QyGNnC/NY/vC98d7+BqmDdGBdQerEb5f5TL2r+eTExkx9sGIqUumA/3SBM+EpAgAA"
   },
   "Metadata": {
    "aws:cdk:path": "QuickBiteStack/CDKMetadata/Default"
   }
  }
 },
 "Conditions": {
  "QuickBiteClusterHasEcrPublic7A53002E": {
   "Fn::Equals": [
    {
     "Ref": "AWS::Partition"
    },
    "aws"
   ]
  }
 },
 "Outputs": {
  "ClusterName": {
   "Value": {
    "Ref": "QuickBiteCluster50665CCD"
   }
  },
  "WebAppRepositoryUri": {
   "Value": {
    "Fn::Join": [
     "",
     [
      {
       "Fn::Select": [
        4,
        {
         "Fn::Split": [
          ":",
          {
           "Fn::GetAtt": [
            "WebAppRepositoryE1B58524",
            "Arn"
           ]
          }
         ]
        }
       ]
      },
      ".dkr.ecr.",
      {
       "Fn::Select": [
        3,
        {
         "Fn::Split": [
          ":",
          {
           "Fn::GetAtt": [
            "WebAppRepositoryE1B58524",
            "Arn"
           ]
          }
         ]
        }
       ]
      },
      ".",
      {
       "Ref": "AWS::URLSuffix"
      },
      "/",
      {
       "Ref": "WebAppRepositoryE1B58524"
      }
     ]
    ]
   }
  },
  "EksCommandToGetServiceEndpoint": {
   "Value": "kubectl get svc quickbite-webapp -n quickbite -o jsonpath='{.status.loadBalancer.ingress[0].hostname}'"
  }
 },
 "Parameters": {
  "BootstrapVersion": {
   "Type": "AWS::SSM::Parameter::Value<String>",
   "Default": "/cdk-bootstrap/hnb659fds/version",
   "Description": "Version of the CDK Bootstrap resources in this environment, automatically retrieved from SSM Parameter Store. [cdk:skip]"
  }
 },
 "Rules": {
  "CheckBootstrapVersion": {
   "Assertions": [
    {
     "Assert": {
      "Fn::Not": [
       {
        "Fn::Contains": [
         [
          "1",
          "2",
          "3",
          "4",
          "5"
         ],
         {
          "Ref": "BootstrapVersion"
         }
        ]
       }
      ]
     },
     "AssertDescription": "CDK bootstrap stack version 6 required. Please run 'cdk bootstrap' with a recent version of the CDK CLI."
    }
   ]
  }
 }
}
